// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots InlineNotification Default 1`] = `
<p
  className="sc-bxivhb kRfUJT"
>
  <span
    className="sc-htpNat eGtcyu"
  >
    <span
      className="sc-htpNat bCblnl"
    >
      <span
        aria-hidden={true}
        className="sc-iwsKbI jSMqMr"
        dangerouslySetInnerHTML={
          Object {
            "__html": "test-file-stub",
          }
        }
        role="img"
      />
    </span>
    <span
      className="sc-htpNat eGtcyu"
    >
      Something is wrong!
    </span>
  </span>
</p>
`;

exports[`Storyshots InlineNotification With children 1`] = `
<p
  className="sc-bxivhb WWdpn"
>
  <span
    className="sc-htpNat eGtcyu"
  >
    <span
      className="sc-htpNat bCblnl"
    >
      <span
        aria-hidden={true}
        className="sc-iwsKbI jSMqMr"
        dangerouslySetInnerHTML={
          Object {
            "__html": "test-file-stub",
          }
        }
        role="img"
      />
    </span>
    <span
      className="sc-htpNat eGtcyu"
    >
      Are you having trouble? Check out 
      <a
        className="sc-kgoBCf jeROkT"
        href="http://google.com"
        target={undefined}
        title="some resource"
      >
        this
      </a>
       resource for more info.
    </span>
  </span>
</p>
`;

exports[`Storyshots InlineNotification With overwritten Icon 1`] = `
<p
  className="sc-bxivhb kRfUJT"
>
  <span
    className="sc-htpNat eGtcyu"
  >
    <span
      className="sc-htpNat bCblnl"
    >
      <span
        aria-hidden={true}
        className="sc-iwsKbI jSMqMr"
        dangerouslySetInnerHTML={
          Object {
            "__html": "test-file-stub",
          }
        }
        role="img"
      />
    </span>
    <span
      className="sc-htpNat eGtcyu"
    >
      Something is wrong!
    </span>
  </span>
</p>
`;
